fixed submit button spacing for de lang

--- a/assets/scss/_contactform.scss
+++ b/assets/scss/_contactform.scss
@@ -110,12 +110,12 @@
   }
   
   input[type="submit"] {
-    max-width: 110px;
+    max-width: 120px;
     margin: 0;
     background-color: #049f30;
     border: none;
     color: white;
-    padding: 12px 28px;
+    padding: 12px 16px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
